--- a/styles/Carrito.module.css
+++ b/styles/Carrito.module.css
@@ -38,7 +38,7 @@
     position: relative;
     width: 250px;
     height: 40px;
-    background: yellow;
+    background: white;
     font-size: 18px;
     margin-left: 50px;
 }
